edit HTML file's / Bootstrap

--- a/templates/landing/egg.html
+++ b/templates/landing/egg.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--BOOTSTRAP-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <title>Easter egg</title>
 </head>
 <body>
 
-<h4>2pac 4Life</h4>
+    <h4>2pac 4Life</h4>
+    <h2>Summa : {{ suma }}</h2>
+
+
+
+
+    <!--JavaScript-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 
 </body>
 </html>
