--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -1,9 +1,13 @@
-{% load static %}
+{% load staticfiles %}
 
 <!DOCTYPE html>
-{% load staticfiles%}.
 <html lang="en">
 <head>
+
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/landing.css' %}">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
