upgrade about.html with css

--- a/templates/landing/about.html
+++ b/templates/landing/about.html
@@ -1,12 +1,20 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>About</title>
+        <!--Bootstrap-->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{%static 'css/about.css' %}">
 </head>
 <body>
 
-<p align=center><h1>  by rudiq</h1>
+<h1><p align="center">Check my skill</h1>
+<h2><tt><p align="center">to design</tt></h2>
+<h3><i><p align="center">HTML-pages</i></h3>
 
 </body>
 </html>
