New landing.html,added forms,model into landing ,make migrations , migrate . Stop

--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -9,11 +9,21 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static 'css/landing.css' %}">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Сверхяркие Лед-Лампочки</title>
 </head>
 <body>
 
-    <h1>HELLO WORLD</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-4">
+                <h1><i><p align="center">Для того щоб отримати лист - укажіть свій e-mail :</i></h1>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
 </body>
 </html>
