--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -16,6 +16,15 @@
         <div class="row">
             <div class="col-lg-4 col-lg-offset-4">
                 <h1><i><p align="center">Для того щоб отримати лист - укажіть свій e-mail :</i></h1>
+                    <div>
+                        <form action="" method="post">{% csrf_token %}
+                            {{ form.as_p }}
+                            <div>
+                                <button type="submit" class="btn btn-primary">Відправити</button>
+                            </div>
+
+                        </form>
+                    </div>
             </div>
         </div>
     </div>
