add HTML/CSS code .... navbar footer . Create a base HTML page with bootstrap /// update urls & views

--- a/templates/landing/landing.html
+++ b/templates/landing/landing.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400&amp;subset=cyrillic-ext" rel="stylesheet"> <!-- Кастомний шрифт -->
-    <link rel="stylesheet" href="{% static 'css/landing.css' %}"> <!-- Підключаєм ксс -->
+    <link rel="stylesheet" href="{% static 'landing.css' %}"> <!-- Підключаєм ксс -->
     <meta charset="UTF-8">
     <title>Назва сторінки</title>
 
