--- a/templates/landing/about.html
+++ b/templates/landing/about.html
@@ -8,7 +8,7 @@
         <!--Bootstrap-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{%static 'css/about.css' %}">
+    <link rel="stylesheet" href="{%static 'about.css' %}">
 </head>
 <body>
 
