Add a verbose_name on a ORDER/PRODUCT models. Create BaseDjangoModel with created/updated fields. Add .gitignore.

--- a/templates/landing/main.html
+++ b/templates/landing/main.html
@@ -12,7 +12,8 @@
                 {% for item in products %}
                     <div class="col-lg-4">
                         <div class="product-item">
-                            {{ item.name }}
+                            {{ item.name }}<br>
+                            {{ item.description }}
                         </div>
                     </div>
                 {% endfor %}
