--- a/static/styles.css
+++ b/static/styles.css
@@ -1,13 +1,22 @@
 html , body{
     height:100%;
     max-height: 100%;
-    background-color: lightgray;
+    background-color: #dbdbdb;
 }
 
 
 .product-item{
-    border: 1px solid lightgray;
-    height: 500px;
     position: relative;
-    background-color: white;
+    padding: 25px;
+    border: 1px solid grey;
+    height: 500px;
+    background: lightgrey;
+    text-align: center;
+}
+
+.add-to-cart-btn{
+    position: absolute;
+    bottom: 10px;
+    left: 100px;/*Тут тре шось придумати*/
+
 }
