--- a/templates/landing/main.html
+++ b/templates/landing/main.html
@@ -10,7 +10,7 @@
                     <div class="col-lg-4">
                         <div class="product-item">
                             <div>
-                                <img src="{{ products_images.image.url }}" class="img-responsive">
+                                <img src="{{ item.image.url }}" class="img-responsive">
                             </div>
                             <h2>{{ item.name }}</h2>
                             <p>
