--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <div class="text">
-            <h3>FOOTER</h3>
+            <h3> prod by rudiq4 </h3>
         </div>
     </div>
 </footer>
