--- a/templates/landing/main.html
+++ b/templates/landing/main.html
@@ -3,33 +3,100 @@
 {% load static %}
 
 {% block content %}
-    <div class="section">
+    <div class="section1">
         <div class="container">
             <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="text-center">
+                        Новинки
+                    </h1>
+                </div>
                 {% for item in products_images %}
                     <div class="col-lg-4">
                         <div class="product-item">
                             <div>
                                 <img src="{{ item.image.url }}" class="img-responsive">
                             </div>
-                            <h2>{{ item.name }}</h2>
-                            <p>
-                                {{ item.description | truncatechars_html:120}}
-                            </p>
-                            <div>
-                                {{ item.price }} UAH
-                            </div>
-                            <div class="add-to-cart-btn">
-                                <button class="btn btn-success">
-                                    Добавити в корзину
-                                </button>
+                                <h2>{{ item.name }}</h2>
+                                    <p>
+                                        {{ item.product.description | truncatechars_html:120}}
+                                    </p>
+                                        <div>
+                                            {{ item.product.price }} UAH
+                                        </div>
+                                    <div class="add-to-cart-btn">
+                                        <button class="btn btn-success">
+                                            Добавити в корзину
+                                    </button>
                             </div>
                         </div>
                     </div>
                 {% endfor %}
             </div>
         </div>
-
     </div>
-
+    <div class="section2 ukrainian-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="text-center">
+                        Cвітові бестселери
+                    </h1>
+                </div>
+                {% for item in products_images_ukrainian %}
+                    <div class="col-lg-4">
+                        <div class="product-item">
+                            <div>
+                                <img src="{{ item.image.url }}" class="img-responsive">
+                            </div>
+                                <h2>{{ item.name }}</h2>
+                                    <p>
+                                        {{ item.product.description | truncatechars_html:120}}
+                                    </p>
+                                        <div>
+                                            {{ item.product.price }} UAH
+                                        </div>
+                                    <div class="add-to-cart-btn">
+                                        <button class="btn btn-success">
+                                            Добавити в корзину
+                                    </button>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="section3 world-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="text-center">
+                        Українська класика
+                    </h1>
+                </div>
+                {% for item in products_images_world %}
+                    <div class="col-lg-4">
+                        <div class="product-item">
+                            <div>
+                                <img src="{{ item.image.url }}" class="img-responsive">
+                            </div>
+                                <h2>{{ item.name }}</h2>
+                                    <p>
+                                        {{ item.product.description | truncatechars_html:120}}
+                                    </p>
+                                        <div>
+                                            {{ item.product.price }} UAH
+                                        </div>
+                                    <div class="add-to-cart-btn">
+                                        <button class="btn btn-success">
+                                            Добавити в корзину
+                                    </button>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
