--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,13 +9,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">BookReader</a>
+            <a class="navbar-brand" href="/">BookReader</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Додому</a></li>
-                <li><a href="#about">Про нас</a></li>
-                <li><a href="#contact">Контакти</a></li>
+                <li><a href="/">Додому</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Випадаючий список <span class="caret"></span></a>
@@ -34,10 +32,10 @@
 
                 {% if request.user.is_authenticated %}
                     <li>
-                        <a href="http://127.0.0.1:8000/logout/">Вихід</a>
+                        <a class="exit-button" href="http://127.0.0.1:8000/logout/">Вихід</a>
                     </li>
                     <li>
-                        {{ request.user.username }}
+                        <button type="button" class="btn btn-secondary btn-lg" disabled>{{ request.user.username }}</button>
                     </li>
                 {% else %}
                     <li>
